--- a/pom.xml
+++ b/pom.xml
@@ -97,8 +97,12 @@
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
 
-
-
+		<!--SWAGGER-->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.0.3</version>
+		</dependency>
 
 	</dependencies>
 
