--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main" ]
     paths-ignore:
-      - './github/workflows/**'
+      - '.github/workflows/**'
   workflow_dispatch:
   pull_request:
     branches: [ "main" ]
