--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,6 +33,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
     # Step 1: Set up SSH to Connect to EC2
     - name: Set up SSH
       uses: webfactory/ssh-agent@v0.5.3
